feat/spring: update news service to integrate with CORBA endpoints and improve error handling